src/App.css
@import url("https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans&display=swap");

body {
  display: flex;
  align-content: center;
  justify-content: center;
  background: rgb(255, 255, 255);
  font-size: 10px;
  font-family: "Open Sans";
  color: rgb(90, 89, 86);
}
.App {
  height: 100vh;
  width: 80vw;
  display: flex;
  flex-direction: column;
}

a {
  text-decoration: none;
  color: rgb(148, 40, 40);
}

/* Header */

.header_container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: 80vw;
  top: 5rem;
  position: relative;
}
.header_container h1 {
  font-size: 1rem;
}
.header_container ul {
  list-style: none;
}
.header_container ul li {
  display: inline-block;
  padding-right: 2rem;
}
.header_container ul li a {
  text-decoration: none;
  color: rgb(245, 124, 68);
  font-size: 1rem;
  margin-right: -6vh;
  padding: 2rem;
}

/* Home */
.home_container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  position: relative;
  top: 9rem;
}

.home_container .home_head_wrapper {
  position: relative;
  top: 2rem;
  display: flex;
  flex-direction: column;
  width: 40vw;
}
.home_container .home_head_wrapper h1 {
  font-size: 4.5rem;
  font-family: "Montserrat";
}
.home_container .home_head_wrapper h1 span {
  color: rgb(245, 124, 68);
}
.home_container .home_head_wrapper p {
  position: relative;
  top: -4rem;
  font-size: 2rem;
  opacity: 0.4;
}
.home_container .image_container img {
  position: relative;
  max-width: 100%;
  height: auto;
  padding: 5vh;
  margin-top: 7vh;
  margin-left: 12vh;
}

/* Work */
.work_container {
  display: flex;
  flex-direction: column;
  position: relative;
  top: 18rem;
  width: 80vw;
}
.work_container h1 {
  font-size: 5rem;
  font-family: "Montserrat";
}
.work_container .projects_container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 1rem;
}
.work_container .projects_container img {
  height: 20rem;
  width: 20rem;
}
.work_container .projects_container .title {
  font-size: 1.2rem;
}

/* Contact */

.contact_container {
  display: flex;
  flex-direction: column;
  position: relative;
  top: 20rem;
}
.contact_container h1 {
  font-size: 10rem;
  font-family: "Montserrat";
}
.contact_container p {
  width: 50vw;
  font-size: 2rem;
  position: relative;
  top: -6rem;
  opacity: 0.4;
}
.contact_container .email_link {
  font-size: 4rem;
  color: rgb(245, 124, 68);
  position: relative;
  top: -4rem;
}

.contact_container ul {
  list-style-type: none;
}
.contact_container li {
  display: inline;
  padding-right: 3rem;
}
.contact_container li a {
  color: rgb(54, 40, 46);
  text-decoration: none;
  font-size: 2rem;
}

/* About */

.about_container {
  display: flex;
  flex-direction: column;
  width: 80vw;
  justify-content: center;
  position: relative;
  top: 10rem;
}
.about_container h1 {
  font-size: 5rem;
  font-family: "Montserrat";
}
.about_container p {
  position: relative;
  top: -2rem;
  font-size: 1.6rem;
  width: 60vw;
  opacity: 0.4;
}
.about_container .about_contact {
  position: relative;
  top: -20rem;
}

@media only screen and (max-width: 600px) {
  body {
    font-size: 2px;
  }

  /* Header */

  .header_container {
    width: 80vw;
    top: 2rem;
  }

  .header_container h1 {
    font-size: 1rem;
  }

  .header_container ul li {
    padding-right: 1rem;
  }

  /* Home */

  .home_container {
    top: 6rem;
  }

  .home_container .home_head_wrapper {
    top: 1.5rem;
    width: 60vw;
  }

  .home_container .home_head_wrapper h1 {
    font-size: 1.2rem;
  }

  .home_container .home_head_wrapper p {
    top: 0rem;
    font-size: 0.7rem;
  }

  .home_container .image_container img {
    height: 10rem;
    width: 8rem;
    top: 2rem;
  }

  /* Work */
  .work_container {
    top: 10rem;
    width: 80vw;
  }

  .work_container h1 {
    font-size: 2rem;
  }

  .work_container .projects_container {
    grid-gap: 0.2rem;
  }

  .work_container .projects_container img {
    height: 8rem;
    width: 8rem;
  }

  .work_container .projects_container .title {
    font-size: 0.8rem;
  }

  /* Contact */

  .contact_container {
    top: 10rem;
  }

  .contact_container h1 {
    font-size: 4rem;
  }

  .contact_container p {
    font-size: 0.6rem;
    top: -1rem;
  }

  .contact_container .email_link {
    font-size: 1rem;
    top: 0rem;
  }

  .contact_container li {
    padding-right: 1rem;
  }

  .contact_container li a {
    font-size: 0.5rem;
  }
}

@media only screen and (min-width: 600px) and (max-width: 800px) {
  body {
    font-size: 2px;
  }

  /* Header */

  .header_container {
    width: 80vw;
    top: 2rem;
  }

  .header_container h1 {
    font-size: 1rem;
  }

  .header_container ul li {
    padding-right: 1rem;
  }

  /* Home */

  .home_container {
    top: 6rem;
  }

  .home_container .home_head_wrapper {
    top: 1.5rem;
    width: 60vw;
  }

  .home_container .home_head_wrapper h1 {
    font-size: 1.2rem;
  }

  .home_container .home_head_wrapper p {
    top: 0rem;
    font-size: 0.7rem;
  }

  .home_container .image_container img {
    height: 10rem;
    width: 8rem;
    top: 2rem;
  }

  /* Work */
  .work_container {
    top: 10rem;
    width: 80vw;
  }

  .work_container h1 {
    font-size: 2rem;
  }

  .work_container .projects_container {
    grid-gap: 0.2rem;
  }

  .work_container .projects_container img {
    height: 8rem;
    width: 8rem;
  }

  .work_container .projects_container .title {
    font-size: 0.8rem;
  }

  /* Contact */

  .contact_container {
    top: 10rem;
  }

  .contact_container h1 {
    font-size: 4rem;
  }

  .contact_container p {
    font-size: 0.6rem;
    top: -1rem;
  }

  .contact_container .email_link {
    font-size: 1rem;
    top: 0rem;
  }

  .contact_container li {
    padding-right: 1rem;
  }

  .contact_container li a {
    font-size: 0.5rem;
  }
}

